--- a/s&p-historical-constituents.ipynb
+++ b/s&p-historical-constituents.ipynb
@@ -346,7 +346,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
