reduced word count to fit in requirements

--- a/project-proposal/proposal.tex
+++ b/project-proposal/proposal.tex
@@ -11,7 +11,7 @@
 \usepackage{lipsum}
 \usepackage{multicol}
 \usepackage{xcolor}
-\usepackage{natbib}
+\usepackage[authoryear,sort]{natbib}
 \usepackage{textcomp}
 \usepackage[font=small]{caption}
 \bibliographystyle{plainnat}
@@ -56,71 +56,33 @@
 \begin{multicols*}{2}
 
 \section{Introduction}\label{introduction}
-
-Interest in capital adequacy assessments have grown exponentially since the signing of the Basel II accord in 2004, shortly after the dot com bubble burst where investment behavior was less than prudent.
-As time progressed and the world struggled through the Great Financial Crisis of 2008, interest in accurate default forecasts to assess financial capability only grew. As an central component of assessing obligor credit quality,
-pricing credit related financial instruments such as bonds and credit default swaps, and measuring impact of regulation, default forecast methodologies that are accurate, explainable and robust to the dynamic financial landscape can significantly benefit the operational consistency of financial systems across the world.  
  
 \subsection{Motivation}\label{motivation}
 
-Corpoate defaults impact the financial system beyond the obligor itself. It represents an immediate financial loss in the company's investors, lenders, and depending on the number of defaults in a time period, the economic loss to the country the company is based in.
-Understanding the likelihood of a company defaulting helps creditors screen for potential borrowers for more secure returns, investors price instruments at fair value and manage portfolios, and regulators assess the state of the market and decide whether or not to intervene.
-Thus models of assessing default risk were created by these parties to quantify the risk and track it over time, one of the most popular models being credit ratings.  
-
-Credit ratings provide a relatively objective assessment of a firm's ability to repay its existing debt based off of capital structure, historical performance, internal synergies and external influences on a letter scale.
-This perception of reliability in turn influences lending capacity, investment instrument pricing, corporate strategy, and regulatory oversight of the firm as previously mentioned. 
-Credit ratings gained popularity and became one the most common methods of risk assessment due to two factors. Firstly, it is constructed mainly from firm's financial and economic fundmanetal characteristics, lending the ratings to be highly explicable.
-More importantly, the ratings are arranged into a letter scale from the highest quality of AAA to companies already in default at D, allowing quick interpretation and decision making, providing a boon for portfolio managers who often face pressure to make high-impact decisions on a tight schedule.
-Naturally it has been adopted by many in risk modelling and investment management.
-
-The Great Financial Crisis of 2008 (GFC) exposed several weaknesses of the credit rating system as a investment decision making tool. The letter gradings are still too coarse to assess the credit quality of a firm outside of screening purposes.
-Furthermore, credit ratings are assigned relative to other companies within each rating agency; this not only makes aggregration of firms difficult, but also does not clearly translate to the actual risk of default aside from observing historical rates experienced in each category and performing extrapolations.
-This means credit ratings are a lagging indicator and are slow to adapt changes in the general state of the economy, particularly changes in the broad environment that may not be directly correlated with the firm, giving the rise in demand for a more granular and objective measure of default risk and the birth of the Probability of Default model, henceforth referred to as PD.
-    
-\subsubsection{Probability of Default Models in Industry}\label{industry}
-
-Unlike credit ratings which assign firms to a finite, often restrictive, set of credit quality indicators, a PD estimates a concrete probability to the firm experiencing financial default.
-This allows rigorous comparisons between firms across agencies as well as scientific examinations of risk management practices. Due to these factors, PD has quickly gained popularity of usage in credit risk modelling, loan pricing, and portfolio management.
-There are many ways to model PDs, ranging from a simple logistic regression on observed historical defaults to complex multistep models using firm, market and country-level performance over 10+ years. 
-As of the present, all of the "big three" (S\&P, Moody's and Fitch) ratings agencies, as well as many financial data service providers (eg. Bloomberg, Morningstar Refinitiv) are offering PD estimates for firms in its database, a testament to the popularity of PDs in commercial use.
-
-The PD models for each of the three firms is undisclosed; yet there are interesting numances from what information they have revealed. 
-The S\&P model uses a dataset of "default flags" (ie. financial statement ratios that can signal default) and derives its PDs with a Maximal Utility approach for optimisation and k-fold Greedy Forward for variable selection bounded by AIC for model parsimony \citep{SP-PD-methodology}. 
-Fitch employs a Monte Carlo simulation model to estimate the probability and frequency of a firm's assets falling below its liabilities, mostly relying on historical credit rating data \citep{Fitch-PD-methodology}. 
-Moody's exhibits the most comprehensive and complex model, using macroeconomic indicators on top of individual firm information, as well as incorporating credit migration matrices to calibrate its model over longer periods of time. The PDs appear to be calculated through a censorship-corrected survival analysis model \citep{Moodys-PD-methodology}.
-
-Overall, these models use similar data as the credit ratings and employ relatively straightforward methodologies to model the occurrence of defaults within a credit portfolio. This once again lends to highly explicable PD results that might not fully capture the complexities in the market and broad economy.
-Naturally, more complex methods of modelling PDs emerged. The proposal will introduce the most straightforward, and once again most popular method, the credit rating migration matrix, in the next subsection, and will provide an overview of  \ref{lit-review}.
-
-\subsubsection{Credit Rating Migration Matrix}\label{crmm}
-
-In a portfolio, companies exist in more states than simply default and non-default. The credit rating migration matrix captures a portion of this information by also calculating the probabilities a certain firm improves or degrades in percieved credit quality. 
-Often the rating migrations are mapped to existing credit rating categories for ease of interpretation. The probabilities of migrating into other categories provide an additional level of granularity into corporate default prediction, providing more stable forecasts into future default occurrences, 
-as well as providing stress testing capabilities on existing portfolios. As such the ability to generate accurate, dynamic credit rating migration matrices is crucial to effective pricing and risk management across the financial services industry, motivating the development of credit rating migration matrix forecasting methodologies which will be outlined in \ref{lit-review} and \ref{objectives}.
+Credit ratings provide a relatively objective assessment of a firm's ability to repay its existing debt based off on a letter scale based on the firm's performance and external environment. This perception of reliability in turn influences lending capacity, investment instrument pricing, corporate strategy, and regulatory oversight. 
+Credit ratings gained popularity and became one the most common methods of risk assessment due to its ability for quick, intuitive interpretation. However, The Great Financial Crisis of 2008 (GFC) exposed several weaknesses of the credit rating system as a investment decision making tool. The letter gradings are still too coarse to assess the credit quality of a firm outside of screening purposes.
+Furthermore, credit ratings are assigned relative to other companies within each rating agency; this not only makes aggregration of firms difficult, but also does not clearly translate to the actual risk of default aside from observing historical rates experienced in each category and performing extrapolations. 
 
 \subsection{Previous Works}\label{lit-review}
 
-The coarseness associated with credit ratings has been addressed as early as the late 60s with Altam's Z score. The function takes multiple solvency ratios, computes a score relative to the firm group using the MDA technique, and firms are ranked using the MDA scores to determine credit risk \citep{altman}. Despite being simple to apply and provides more granularity than basic credit ratings, 
-the resulting scores only represent a ranking between the firms and have little intuitive interpretation value otherwise. To counteract this issue, Ohlson introduced a likelihood based forecasting approach, employing logistic regression on similar fundamental financial ratios as input parameter vectors \citep{ohlson}. This significantly improves upon MDA based methods by producing a score that directly ties with 
-the probability of default, and a correlation matrix between the input components and probability of default can be generated to analyze for significant parameters. Nevertheless, both methods ultimately only produce a score relative to the data sample, reducing its applicability to broader financial data. Additionally, both methods model probability of defaults at a specific period in time, lending to poor adaptability
-to changes for forecasts over singular time periods.
+The broad and vague categories within credit ratings has been addressed as early as the late 60s with Multiple Discriminant Analysis, ranking companies in a credit portfolio along a discrete scale\citep{altman}. While Ohlson introduced a likelihood based forecasting approach, employing logistic regression on similar fundamental financial ratios as input parameter vectors \citep{ohlson}. 
+Both methods produce a score relative to the data sample, reducing its applicability to broader financial data. Additionally, both methods model probability of defaults at a specific period in time, lending to poor adaptability to changes for forecasts over time periods.
 
-Time series-based models arose as a response to this particular issue. Two major approaches of temporal-based analysis arose. Starting with \citep{shumway} on a reduced set of market-driven (as opposed to the traditional accounting driven) variables, the first approach involve proportional hazard duration analysis and favored the use of market/index parameters in prediction (\citep{chava}, \citep{hillegeist}, \citep{hull}).
-Using this work as a theoretical basis, \citep{duffie} introduced a double stochastic poisson process measuring "time to default" to assist in forecasting, with several advantages. It achieves the main objective of overcoming the compulsory period-by-period forecasting process for the hazard duration analysis models, but also accounts for non-default types of exits such as mergers \& acquisitions, and delistings. 
-Unfortunately, the strict high-dimensional data requirements complicate the data formatting process, exponentiate computation time, and introduce parameter instability into the model. 
+\citep{shumway}'s proportional hazard duration model marked the beginning of time series based methodologies estimaing a concrete Probability of Default (PD) on a combination of accounting and market data. Using this work as a theoretical basis, \citep{duffie} introduced a double stochastic poisson process measuring "time to default" to assist in forecasting, 
+overcoming the unstable yet compulsory period-by-period forecasting process for the hazard duration analysis models, while also accounting for non-default types of exits such as mergers \& acquisitions, and delistings. Unfortunately, the strict high-dimensional data requirements complicate the data formatting process, exponentiate computation time, and introduce new sources of parameter instability into the model. 
 \citep{duan2012} directly improves upon the double stochastic poisson model, eliminating the previously explicit high-dimensional intermediate state variable estimation through pseudo-likelihood optimisation on CRSP firm and market information. As the function can be decomposed to observe specific parameters for different time periods, it is less computationally intensive and allows for parallel computing. 
 The forward intensity estimate PDs are later used to construct the CRI-PD database used in modelling PD-implied default rates in \citep{duan2021}. This paper maps PDs from the database to the respective rating grades on the S\&P scale based on bounds optimised through data-cloning Sequential Monte Carlo (SMC) techniques \citep{duan2020} based on observed historical default occurrences and firm information from CRSP. 
 This introduces a generic technique capable of mapping PD-bsed granular models back to credit ratings, which could encourage the use of PD models in industry for risk analysis and portfolio management. The model was enhanced to use credit rating migration matrices instead of historical observed default rates in \citep{duan2021-2}. Using S\&P annualized observed migration matrices from the CEREP database filtered out for non-default exits, 
 the implied credit rating migration matrix is calculated for future time periods for each firm of interest. This adjustment solved a shortcoming in the previous methodology where default rates for AAA to AA+ companies had to be arbitrarily extrapolated due to lack of observed defaults, as well as reducing overestimation of companies in the AAA category. However, due to the non-continuous nature of the rating classification, 
 optimisation still relies on SMC, which can degenerate and become computationally intensive \citep{bourgey}.
 
-Introduced in \citep{li}, the second approach uses gaussian copula functions to study default correlation between companies. Unlike the first method, where the event of default is measured as a discrete probability, the random variable here is "time-until-default". The marginal distributions of firms' survival times are derived from observed market information only, which is used to determine the joint distribution of survival times for all firms.
+Introduced in \citep{li}, an alternative approach using gaussian copula functions to study default correlation between companies was developed in tandem. Unlike the first method, where the event of default is measured as a discrete probability, the random variable here is "time-until-default". The marginal distributions of firms' survival times are derived from observed market information only, which is used to determine the joint distribution of survival times for all firms.
 The model was applied in \citep{bourgey} to estimate risk on a large credit portfolio and was quickly adapted in industry for calculating Collateralized Debt Obligations (CDOs) due to is ease of implementation and people's familiary with its undelying theory of joint normal distributions \citep{mackenzie}. Yet its simplicity also was the model's biggest pitfall, as its inability to account for tail dependence between parameters resulted in false impressions of CDOs being more diversified then they actually were, 
 leading to the model's subsequent vilification by the public for contributing to the GFC \citep{zimmer}. \citep{allouche} sought to challenge the gaussian coupla model through implementing a temporal-based Dictionary Learning (DL) ML algorithm, constrained by autoregressive regularization. Though the implementation as small-dimension quadratic optimisation problems with linear constraints allow for significantly faster computational implementation compared to the parametric gaussian copula model,
 and DL is shown to produce more accurate and consistent results compared to the gaussian copula model, the resulting rating migration matrix output consisting of relative signal strengths of rating category upgrades/downgrades is a major setback in interpretability, making the model difficult to use for pricing and regulation purposes in practice. Additionally, the model was trained on incomplete sparse data and was benchmarked against the gaussian copula model on synthetic data, casting doubt on the evident superiority
 the authors claim.
 
-As computational power improved, there have been studies comparing the performance between ML models and traditional ststistical methods. Studies like \citep{barboza} and \citep{sigrist} suggested improved prediction and discrimination power for decision tree based models through comparison with traditional statistical techniques. These studies show promise in applying ML methods for default forecasting capabilities; nevertheless there are several major shortcomings of these studies. 
+As computational power improved, there have been studies implementing corporate default forecasting methods using machine learning over the aforementioned statistical methods. Studies like \citep{barboza} and \citep{sigrist} suggested improved prediction and discrimination power for decision tree based models through comparison with traditional statistical techniques. These studies show promise in applying ML methods for default forecasting capabilities; nevertheless there are several major shortcomings of these studies. 
 The biggest flaw among model comparison studies like these come from the statistical benchmarks. Often the machine learning models are compared to rudimentary statistical models such as logistic regression or linear discriminant analysis; it is doubtful the improvement in performance is as significant if the benchmarks were a more complex survival analysis model. In addition, the model results may not be applicable to other markets and economies as their training data is restricted to specific countries in Europe.
 Deep learning models are also explored in corporate default prediction; \citep{mai} supports the value in including textual information from 10-K filings in a CNN deep learning framework feeding document-term matrices extracted via Term-Frequency (TF) scanning. \citep{korangi} leverages transformer-based encoders to create textual data representations appropriate for a multimodal Temporal Convolution Network on mid-cap firms in the S\&P index. 
 
